# qiboedu

./: .gitignore  README.md  flake.nix  pyproject.toml
figures/: ancillas.xmind
notebooks/: Bell-Wigner inequality.ipynb  Bell64 inequality.ipynb  CHSH inequality.ipynb  L1.ipynb  L_extra_with_n5_too.ipynb  Lecture1.ipynb  Lecture2.ipynb  Lecture3.ipynb  Lecture4.ipynb  Lecture5.ipynb  Lecture6.ipynb  Lecture7.ipynb  Lecture8.ipynb  LectureExtra.ipynb  LectureExtraGrover.ipynb  qiboedu
notebooks/Bell inequalities/: 1. Bell-Wigner inequality.ipynb  2. Bell64 inequality.ipynb  3. CHSH inequality.ipynb
notebooks/Bell_inequalities/: 1_Bell-Wigner.ipynb  2_Bell64.ipynb  3_CHSH.ipynb  README.md
notebooks/Control/: qibocal.ipynb  qibolab-solutions.ipynb  qibolab.ipynb
notebooks/Control_and_calibration/: 1_qibolab.ipynb
notebooks/ExerciseSolutions/: Exercise1.ipynb
notebooks/Introduction/: 1_qibo_basics.ipynb
notebooks/Quantum_machine_learning/: 1_vqe.ipynb  2_fitting_the_proton_content.ipynb  3_hybrid_qml.ipynb  3_lie_equivariant_quantum_graph_nn.ipynb
notebooks/Quantum_noise/: 1_simulating_noise.ipynb  2_error_mitigation.ipynb
notebooks/Query_algorithms/: 1_phase_kickback.ipynb  2_deutsch_josza.ipynb  3_grover.ipynb  4_grover_details.ipynb
notebooks/bell_inequalities/: 1.Bell-Wigner.ipynb  2.Bell64.ipynb  3.CHSH.ipynb  README.md
notebooks/cantiere/: LectureExtraGrover.ipynb
notebooks/empty_nb/: L1.ipynb  L2.ipynb  L3.ipynb  L4.ipynb  LE.ipynb  Lecture1.ipynb  Lecture2.ipynb  Lecture3.ipynb  Lecture4.ipynb  (+3 more)
scripts/: grover.py  plotscripts.py  utils.py
(+40 files in other folders)
